# 42_Multilayer_Perceptron

./: README.md  a.out  build.sh  clean_cmake.sh  data.csv  err.cpp  out.txt  requirements.txt  test_set.csv  train_set.csv  weights_2025-03-08_22-26-59.mlp  weights_2025-03-08_22-27-42.mlp  weights_2025-03-08_22-27-53.mlp  weights_2025-03-08_22-28-05.mlp  weights_2025-03-08_22-28-12.mlp  weights_2025-03-08_22-28-17.mlp  weights_2025-03-08_22-28-25.mlp  weights_2025-03-08_22-28-32.mlp  weights_2025-03-08_22-28-40.mlp  weights_2025-03-08_22-28-47.mlp  weights_2025-03-08_22-29-39.mlp  weights_2025-03-08_22-29-51.mlp  weights_2025-03-08_22-30-14.mlp  weights_2025-03-08_22-30-26.mlp  weights_2025-03-08_22-30-55.mlp  weights_2025-03-08_22-31-16.mlp  weights_2025-03-08_22-31-21.mlp  weights_2025-03-08_22-31-23.mlp  weights_2025-03-08_22-32-47.mlp  weights_2025-03-08_22-32-50.mlp  weights_2025-03-08_22-32-52.mlp  weights_2025-03-08_22-33-04.mlp  weights_2025-03-08_22-33-15.mlp  weights_2025-03-08_22-33-23.mlp  weights_2025-03-08_22-33-30.mlp  weights_2025-03-08_22-33-38.mlp  weights_2025-03-08_22-37-05.mlp  weights_2025-03-08_22-37-14.mlp  weights_2025-03-08_22-37-20.mlp  weights_2025-03-08_22-37-29.mlp  (+30 more)
bicolor_snake/: .gitignore  data_processing.py  train.py  train_test.py
diseased_rat/: .gitignore  .test.cpp  .test.py  CMakeLists.txt  Makefile  mlp.hpp  setup.py
diseased_rat/headers/: matrix.hpp  mlp.hpp
diseased_rat/matrix_module/: CMakeLists.txt  __init__.py  (+1 more)
diseased_rat/mlp_module/: CMakeLists.txt  __init__.py  pybind_mlp.cpp
diseased_rat/mlp_module/src/: mlp.hpp
(+1 files in other folders)
